test/fail/vt_def12.v3
//@execute 0=true; 1=false; 2=false; 3=false; 4=!BoundsCheckException
type HH {
	case One(a: int);
}
def d: HH;
def x = [HH.One(0), HH.One(1), HH.One(2), HH.One(-344)];
def main(a: int) -> bool {
	return x(a) == d;
}
